# floquet_gpu

./: .gitignore  README.md  bench_solvers.py  benchmark.py  benchmark.sh  consolidate.py  consolidate.sh  ozaki.py  profiling.py  pyproject.toml  solvers.py  submit.sh  submit_ozaki_validate.sh  test.ipynb  validate_ozaki.py
out_expm_steps_32/: cpu.npy  gpu_b200.npy  plot.ipynb
out_old/: cpu.npy  plot.ipynb
