[project]
name = "floquet_gpu"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "diffrax==0.7.2",
    "dynamiqs==0.3.3",
    "equinox==0.13.6",
    "h5py>=3.16.0",
    "ipython==9.12.0",
    "jax[cuda13]",
    "jaxlib==0.9.2",
    "jaxtyping==0.3.9",
    "jupyter==1.1.1",
    "lineax==0.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "qutip==5.2.3",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
